[package]
name = "option-chain"
version = "0.1.1"
edition = "2024"
include = ["/src", "LICENSE", "README.md"]
repository = "https://github.com/PRO-2684/option-chain"
license = "MIT"
readme = "README.md"
description = "A macro for using `?` operator in functions that don't return `Option`."
keywords = ["option", "chain", "macro", "no-std"]
categories = ["development-tools::procedural-macro-helpers", "no-std"]

[dependencies]
